--- a/package.json
+++ b/package.json
@@ -6,5 +6,11 @@
   "dependencies": {
     "express": "^4.17.1",
     "sqlite3": "^4.1.1"
+  },
+  "scripts": {
+    "dev": "nodemon index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
